2004-02-12  Julio M. Merino Vidal  <jmmv@menta.net>

	* data/Makefile.am:

	Honour the --disable-schemas-install option

2004-02-11  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Release 0.4.0.

2004-02-11  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	Bump version number to 0.3.99, update NEWS file for upcoming 0.4
	release.

2004-02-11  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-model.c:
	(pointer_list_model_get_moved_iter):
	* libmuine/pointer-list-model.h:
	* libmuine/pointer-list-view.c: (pointer_list_view_next):
	* libmuine/pointer-list-view.h:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Remove obsolete methods.

2004-02-11  Jorn Baayen  <jbaayen@gnome.org>

	* src/About.cs:

	Don't keep the logo pixbuf in memory.

2004-02-10  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-view.c: (pointer_list_view_select_first),
	(pointer_list_view_select_next), (pointer_list_view_select_prev):
	* libmuine/pointer-list-view.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Work around a couple of treeview scrolling bugs.

2004-02-10  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-view.c: (scroll_to_path),
	(pointer_list_view_select_first), (pointer_list_view_select):
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:
	* src/Muine.cs:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Cleanups. Improve startup sequence. Reduce memory usage. Disable
	first startup window until we've sorted the issue out.

2004-02-10  Jorn Baayen  <jbaayen@gnome.org>

	* src/ActionThread.cs:
	* src/Song.cs:
	* src/StringUtils.cs:

	Cleanups, fix cover image fetching.

2004-02-10  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/Metadata.cs:

	More cleanups.

2004-02-10  Jorn Baayen  <jbaayen@gnome.org>

	* src/ActionThread.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs: