@@ -1,3 +1,11 @@
+2004-02-14  Jorn Baayen  <jbaayen@gnome.org>
+
+	* TODO:
+	* src/NotificationAreaIcon.cs:
+	* src/PlaylistWindow.cs:
+
+	Make tray icon a fair bit more useful.
+
 2004-02-12  Julio M. Merino Vidal  <jmmv@menta.net>
 
 	* data/Makefile.am:
